--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rtcm_msgs
-	previous = 
-	base = 6019de5
+	previous = 6019de5
+	base = 1e0fc23
 	trim = 
 	trimbase = 
