--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rtcm_msgs
-	previous = 
-	base = 590f5c8
+	previous = 590f5c8
+	base = 8f5e587
 	trim = 
 	trimbase = 
