--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rtcm_msgs
-	previous = 
-	base = 4bc13e1
+	previous = 4bc13e1
+	base = c705ae5
 	trim = 
 	trimbase = 
